[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Kishan2595 <kishan95.kumar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"